# VBPCApy

./: .gitignore  .lalagitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  __init__.py  justfile  mkdocs.yml  pca_f_autosave  pyproject.toml  readme.md  setup.py  tmp_compare_missing.py  tmp_compare_toggle.py
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  publish.yml
Full_Tests/: 2 running.ipynb  Finch_VBPCA_Recon_All.csv  IsoDataRaw.csv  Untitled1.ipynb  VBPCACulturalCheck.ipynb  X_comparison.ipynb  data4.csv  matlab_X.csv  matlab_x_before_t.csv  python_X_after_for.csv  python_X_before_for.csv
add_m_cols/: add_m_cols.py
add_m_rows/: add_m_rows.py  add_m_rows_test.ipynb
analysis/: convergence_design_matrix.md  convergence_paper_plan.md  stability_analysis.py
argschk/: argschk.py
argsck/: argschk.py  argschk_test.ipynb
argsck/.ipynb_checkpoints/: argck_test-checkpoint.ipynb  argschk_test-checkpoint.ipynb
cf_full/: Untitled.ipynb  cf_full.py  cf_full_tests.ipynb  test3_data.mat
compute_rms/: compute_rms.py
converg_check/: converg_check.py  convrg_check_tests.ipynb
docs/: IMPLEMENTATION_PLAN.md  analysis_plan.md  changelog.md  citation.md  index.md  limitations.md
docs/api/: model-selection.md  plotting.md  preprocessing.md  utilities.md  vbpca.md
docs/concepts/: algorithm.md  convergence.md  data-convention.md  model-selection.md
docs/getting-started/: installation.md  quickstart.md
docs/howto/: convergence.md  plotting.md  runtime-tuning.md
docs/tutorials/: basic-dense-pca.md  cv-diagnostics.md  missing-data-model-selection.md  preprocessing-mixed-data.md  sparse-data.md
errpca_pt/: test.ipynb
errpca_pt + compute_rms/: compute_rms.py  compute_rms_test.ipynb  compute_rms_test_data.mat  rms_python.mat  test_errpca_pt.ipynb
errpca_pt + compute_rms/test_data_compute_rms/: test_data.mat  test_data_case4.mat  test_data_case6.mat
errpca_pt/.ipynb_checkpoints/: errpca_pt-checkpoint.cpp  setup-checkpoint.py
errpca_pt_compute_rms/: compute_rms.py  errpca_pt.cpp
errpca_pt_compute_rms/test_data_compute_rms/: test_data_case3.mat
miscomb/: miscomb.py  miscomb_test.ipynb
miscomb/.ipynb_checkpoints/: miscomb-checkpoint.py
paper/: _check_sd.py  _compute_cis.py  coverage_results.json  paper.bib  paper.md  stability_results.json  stability_results.parquet
pca_full/: Untitled.ipynb  pca_full.py  print_tests.ipynb  rotate_to_pca_test.ipynb  subtract_mu.ipynb  test_pca_loop.ipynb
pca_full/.ipynb_checkpoints/: display_init_test-checkpoint.ipynb  init_parms_test-checkpoint.ipynb  pca_full-checkpoint.py  pca_full_test_matrix_preprocessing-checkpoint.ipynb  subtract_mu-checkpoint.ipynb
pca_full/data_rotateToPCA_test/: test_data_EmptyIsv_8129.mat  test_data_NoVarianceMatrices.mat  test_data_NonEmptyIsv.mat
results/: calib_mice12.csv  calib_mice20.csv  calib_mice20_tol1e2.csv  pairwise_summary.csv  pairwise_summary_pilot.csv  replicates_diabetes_single.csv  replicates_genetics_smoke.csv  replicates_pilot.csv  summary.csv  summary_pilot.csv  vbpca_selection_trace_diabetes_single.csv  vbpca_selection_trace_genetics_smoke.csv  vbpca_selection_trace_pilot.csv
results/paper/: diabetes_rms_trace_summary.csv  table1_method_summary.csv  table2_pairwise_deltas.csv  tableS1_vbpca_selected_k_frequency.csv  tableS2_vbpca_trace_rms_by_k.csv
results/perf_baseline/: core_vbpca_baseline.csv  core_vbpca_baseline_rotate_on_smoke.csv  core_vbpca_baseline_smoke.csv  core_vbpca_baseline_smoke_after_accessors.csv  core_vbpca_baseline_stage10_dense_masked_cpp.csv  core_vbpca_baseline_stage11_dense_cpp_sparse_retuned.csv  core_vbpca_baseline_stage12_noise_kernel.csv  core_vbpca_baseline_stage2_numcpu.csv  core_vbpca_baseline_stage2_threads.csv  core_vbpca_baseline_stage3_noise.csv  core_vbpca_baseline_stage4_cache.csv  core_vbpca_baseline_stage4_reverted.csv  core_vbpca_baseline_stage5_sparse_native.csv  core_vbpca_baseline_stage6_cpp_sparse_kernels.csv  core_vbpca_baseline_stage7_cpp_sparse_threaded.csv  (+9 more)
rmempty/: rmempty.py
scripts/: _convergence_analysis.py  _convergence_diagnostic.py  _rms_original_vs_internal.py  _rms_oscillation_trace.py  benchmark_dense_masked_kernels.py  benchmark_dense_runtime.py  benchmark_missing_pca.py  benchmark_regression_check.py  benchmark_sparse_mask_explicit.py  benchmark_study.md  build_runtime_profile.py  example_missing_pca.py  extract_hgdp_snps.py  make_figures_and_tables.py  make_paper_outputs.py  make_selection_supplement.py  profile_core_vbpca.py  replay_cultural_vbpca.py  summarize_missing_pca.py  validate_benchmark_reproducibility.py
src/: add_m_cols.py  add_m_rows.py  argschk.py  cf_full.py  compute_rms.py  pca_full.py  rmempty.py
subspace_angles/: subspace_angles_test.ipynb
subtract_mu/: subtract_mu_from_sparse.cpp  test.ipynb
tests/: test_converge.py  test_cost.py  test_cov_writeback_autotune.py  test_cov_writeback_correctness.py  test_coverage_small_utils.py  test_dense_masked_parallelism.py  test_estimators.py  test_estimators_and_model_selection.py  test_estimators_coverage.py  test_expand.py  test_full_update.py  test_full_update_coverage.py  test_integration.py  test_mean.py  test_missing.py  test_missing_edge_cases.py  test_model_selection.py  test_monitoring.py  test_octave_parity_smoke.py  test_options.py  test_pca_full.py  test_pca_full_utils.py  test_perf_benchmarks.py  test_preprocessing.py  test_preprocessing_gap.py  test_preprocessing_sparse.py  test_preprocessing_transforms.py  test_properties.py  test_public_api.py  test_remove_empty.py  test_rms.py  test_rms_regression.py  test_rotate.py  test_runtime_policy.py  test_runtime_policy_dense.py  test_runtime_robustness.py  test_sparse_error.py  test_sparse_explicit_mask.py
tools/: OHspecial_transform.m  RotateToPCA.m  SubtractMu.m  VPCACulturalCheck.m  compare_dense_one_iter.py  debug_trace_dense.py  errpca_pt.cpp  errpca_pt.mex  make_mat_fixtures.m  pca_full.m  subtract_mu.cpp  subtract_mu.mex
(+114 files in other folders)
