[build-system]
requires = [
    "setuptools>=64",
    "wheel",
    "pybind11>=2.11",
]
build-backend = "setuptools.build_meta"

[project]
name = "vbpca_py"
version = "0.1.0"
description = "Variational Bayesian PCA (Illin & Raiko 2010) with support for missing data and missing entries."
readme = "README.md"
authors = [
    { name = "Shany", email = "shany215.sn@gmail.com" },
    { name = "Joshua Macdonald", email = "jmacdo16@jh.edu" },
]
requires-python = ">=3.11"

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-benchmark>=4.0",
    "pytest-cov>=4.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]
data = ["pandas>=1.5"]
plot = ["matplotlib>=3.7"]
# For running legacy Octave/Matlab-based helpers or tests; requires Octave installed.
octave = ["oct2py>=5.6"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["vbpca_py*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = """
    -ra
    --strict-markers
"""

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 72

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",  # Missing trailing comma (formatter handles it)
    "CPY001",  # No copyright header
    "D203",    # 1 blank line before class docstring
    "D212",    # Multi-line docstring summary on first line
    "PLR2004", # Magic numbers
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = [
    "INP001",  # Implicit namespace package
    "S101",    # Use of assert in tests
    "PLC2701", # Importing private modules is OK in tests
    "N806",    # Uppercase matrix-style symbols in tests
    "N803",    # Uppercase argument names in tests
    "D103",    # Test functions don't need docstrings
    "PLR0914", # Many locals in test scaffolding
]

[tool.ruff.lint.pydocstyle]
convention = "google"
