[build-system]
requires = [
    "setuptools>=64",
    "wheel",
    "pybind11>=2.11",
]
build-backend = "setuptools.build_meta"

[project]
name = "vbpca_py"
version = "0.1.0"
description = "Variational Bayesian PCA (Illin & Raiko 2010) with support for missing data and missing entries."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Shany", email = "shany215.sn@gmail.com" },
    { name = "Joshua Macdonald", email = "jmacdo16@jh.edu" },
]
maintainers = [
    { name = "Yoav Ram Lab", email = "yoav@yoavram.com" },
]
requires-python = ">=3.11,<3.15"
keywords = [
    "pca",
    "dimensionality-reduction",
    "bayesian",
    "missing-data",
    "variational-inference",
    "machine-learning",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Operating System :: OS Independent",
]
dependencies = [
    "matplotlib>=3.7",
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.urls]
Homepage = "https://github.com/yoavram-lab/VBPCApy"
Repository = "https://github.com/yoavram-lab/VBPCApy"
Issues = "https://github.com/yoavram-lab/VBPCApy/issues"
Changelog = "https://github.com/yoavram-lab/VBPCApy/releases"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-benchmark>=4.0",
    "pytest-cov>=4.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "scipy-stubs>=1.17.1.0",
]
data = ["pandas>=1.5"]
# For running legacy Octave/Matlab-based helpers or tests; requires Octave installed.
octave = ["oct2py>=5.6"]
benchmark = [
    "joblib>=1.3",
    "matplotlib>=3.7",
    "pandas>=1.5",
    "scikit-learn>=1.3",
    "seaborn>=0.13",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["vbpca_py*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = """
    -ra
    --strict-markers
    -m "not perf"
"""
markers = [
    "perf: performance benchmarks (run explicitly with -m perf)",
]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 72

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",  # Missing trailing comma (formatter handles it)
    "CPY001",  # No copyright header
    "D203",    # 1 blank line before class docstring
    "D212",    # Multi-line docstring summary on first line
    "PLR2004", # Magic numbers
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = [
    "INP001",  # Implicit namespace package
    "S101",    # Use of assert in tests
    "PLC2701", # Importing private modules is OK in tests
    "N806",    # Uppercase matrix-style symbols in tests
    "N803",    # Uppercase argument names in tests
    "D103",    # Test functions don't need docstrings
    "PLR0914", # Many locals in test scaffolding
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.uv]
environments = ["python_version >= '3.11' and python_version < '3.15'"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = false
show_error_codes = true
