[build-system]
requires = [
    "setuptools>=64",
    "wheel",
    "pybind11>=2.11",
]
build-backend = "setuptools.build_meta"

[project]
name = "vbpca_py"
version = "0.1.1"
description = "Variational Bayesian PCA (Ilin & Raiko 2010) with support for missing data and missing entries."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Joshua Macdonald", email = "jmacdo16@jh.edu" },
    { name = "Shany Naim", email = "shany215.sn@gmail.com" },
    { name = "Yoav Ram", email = "yoav@yoavram.com" },
]
maintainers = [
    { name = "Yoav Ram Lab", email = "yoav@yoavram.com" },
]
requires-python = ">=3.11,<3.15"
keywords = [
    "pca",
    "dimensionality-reduction",
    "bayesian",
    "missing-data",
    "variational-inference",
    "machine-learning",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.urls]
Homepage = "https://github.com/yoavram-lab/VBPCApy"
Repository = "https://github.com/yoavram-lab/VBPCApy"
Issues = "https://github.com/yoavram-lab/VBPCApy/issues"
Changelog = "https://github.com/yoavram-lab/VBPCApy/releases"

[project.optional-dependencies]
dev = [
    "hypothesis>=6.100",
    "pytest>=8.0",
    "pytest-benchmark>=4.0",
    "pytest-cov>=4.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "scipy-stubs>=1.17.1.0",
]
publish = [
    "build>=1.0",
    "twine>=5.0",
    "cibuildwheel>=2.22",
]
plot = ["matplotlib>=3.7"]
data = ["pandas>=1.5"]
analysis = [
    "matplotlib>=3.7",
    "pandas>=1.5",
    "scikit-learn>=1.3",
]
# For running legacy Octave/Matlab-based helpers or tests; requires Octave installed.
octave = ["oct2py>=5.6"]
benchmark = [
    "joblib>=1.3",
    "matplotlib>=3.7",
    "pandas>=1.5",
    "scikit-learn>=1.3",
    "seaborn>=0.13",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["vbpca_py*"]
exclude = ["tests*"]

[tool.coverage.run]
omit = [
    "src/vbpca_py/plotting.py",  # optional-dependency module (matplotlib)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = """
    -ra
    --strict-markers
    -m "not perf and not octave"
"""
markers = [
    "perf: performance benchmarks (run explicitly with -m perf)",
    "octave: Octave/Matlab parity tests (run explicitly with -m octave)",
]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 72

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",  # Missing trailing comma (formatter handles it)
    "CPY001",  # No copyright header
    "D203",    # 1 blank line before class docstring
    "D212",    # Multi-line docstring summary on first line
    "PLR2004", # Magic numbers
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = [
    "ANN",     # Type annotations not required in tests
    "ARG001",  # Unused arguments (fixtures, parametrize)
    "ARG005",  # Unused lambda arguments
    "B017",    # assertRaises without match OK in tests
    "BLE001",  # Blind except OK for robustness tests
    "D",       # Docstring rules not enforced in tests
    "DOC201",  # Missing return in docstring OK in tests
    "DOC501",  # Missing raises in docstring OK in tests
    "E741",    # Ambiguous variable names (l, I) OK in tests
    "EM101",   # String literal in exception OK in tests
    "EM102",   # f-string in exception OK in tests
    "ERA001",  # Commented-out code OK in tests
    "FBT001",  # Boolean positional args OK in tests
    "FBT002",  # Boolean default args OK in tests
    "INP001",  # Implicit namespace package
    "N803",    # Uppercase argument names in tests
    "N806",    # Uppercase matrix-style symbols in tests
    "PLC0415", # Lazy imports OK in tests
    "PLC1901", # Empty string comparison OK in tests
    "PLC2701", # Importing private modules is OK in tests
    "PLR0913", # Many arguments in test helpers
    "PLR0914", # Many locals in test scaffolding
    "PLR0915", # Too many statements in test functions
    "PLR0917", # Too many positional arguments
    "PLR6301", # Method could be function (test class methods)
    "PLW2901", # Redefining loop variable OK in tests
    "PT011",   # pytest.raises match= not required
    "PT019",   # Fixture without value OK for setup
    "RUF001",  # Ambiguous unicode OK (test data)
    "RUF002",  # Ambiguous unicode OK (test data)
    "RUF003",  # Ambiguous unicode OK (test data)
    "RUF012",  # Mutable class variable annotations
    "RUF034",  # Useless if-else OK in test clarity
    "RUF069",  # Float equality — tracked in issue; fix with pytest.approx / np.testing
    "S101",    # Use of assert in tests
    "S108",    # Temp file paths OK in tests
    "S110",    # try-except-pass OK in robustness tests
    "S301",    # pickle OK in tests
    "S403",    # pickle import OK in tests
    "S404",    # subprocess import OK in tests
    "S603",    # subprocess call OK in tests
    "S607",    # Partial executable path OK in tests
    "SLF001",  # Private member access OK in tests
    "TRY003",  # Long exception messages OK in tests
    "TRY300",  # try-except-return OK in tests
]
"scripts/**/*" = [
    "ANN",     # Type annotations not required in scripts
    "B023",    # Loop variable binding OK in benchmarks
    "BLE001",  # Blind except OK in scripts
    "C901",    # Complex functions OK in scripts
    "D",       # Docstring rules not enforced in scripts
    "E501",    # Long lines OK in scripts
    "EM101",   # String literal in exception OK in scripts
    "EM102",   # f-string in exception OK in scripts
    "EXE001",  # Shebang presence not required
    "FBT001",  # Boolean positional args OK in scripts
    "INP001",  # Implicit namespace package
    "PLC0206", # Dict without .items() OK in scripts
    "PLC0415", # Lazy imports OK in scripts
    "PLC1901", # Empty string comparison OK in scripts
    "PLC2701", # Private name import OK in scripts
    "PLR0913", # Many arguments OK in scripts
    "PLR0914", # Many locals OK in scripts
    "PLR0917", # Many positional args OK in scripts
    "PLR1702", # Nested blocks OK in scripts
    "PLR5501", # Collapsible else OK in scripts
    "PLR6104", # Augmented assignment OK in scripts
    "RUF001",  # Ambiguous unicode OK in scripts
    "RUF003",  # Ambiguous unicode OK in scripts
    "RUF046",  # Redundant int cast OK in scripts
    "S404",    # subprocess import OK in scripts
    "S603",    # subprocess call OK in scripts
    "S607",    # Partial executable path OK in scripts
    "SIM102",  # Collapsible if OK in scripts
    "T201",    # print() OK in scripts
    "TC003",   # Type-checking imports OK in scripts
    "TRY003",  # Long exception messages OK in scripts
    "TRY004",  # TypeError preference OK in scripts
    "SLF001",  # Private member access (intentional for monkey-patching in diagnostics)
    "PLR0915", # Too many statements (diagnostic scripts with many print calls)
]
"analysis/**/*" = [
    "D104",    # Missing docstring in __init__.py OK
    "INP001",  # Implicit namespace package
    "PLR0914", # Many locals OK in plotting functions
    "T201",    # print() OK in analysis scripts
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.uv]
environments = ["python_version >= '3.11' and python_version < '3.15'"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = false
show_error_codes = true
